[tool.poetry]
name = "app"
version = "2.0.0"
description = ""
authors = ["Jakob van Santen <jvansanten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
extcats = "^2.4.3"
catsHTM = "^0.2.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
mongomock = "^4.0.0"
mypy = "^0.991"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
