[tool.poetry]
name = "app"
version = "2.0.0"
description = "catalog-server provides cone searches against extcats and catsHTM catalogs via a REST API. It is strictly read-only, and safe to expose to anonymous users with appropriate rate-limiting."
authors = ["Jakob van Santen <jvansanten@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "^0.128.0"
catsHTM = {path = "vendor/github.com/AmpelAstro/catsHTM"}
# catsHTM secretly depends on pkg_resources via hdf5storage
setuptools = {version = "*", python = ">=3.12"}
extcats = "^2.5.0"
uvicorn = {version="^0.40.0", optional=true}
gunicorn = {version="^23.0.0", optional=true}
pydantic-settings = "^2.5.2"

[tool.poetry.extras]
asgi = ["uvicorn", "gunicorn"]

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.0"
mongomock = "^4.2.0-post.0"
mypy = "^1.11.2"
nest-asyncio = "^1.6.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -r a"
filterwarnings = [
    "error",
    # triggered by hdf5storage
    "ignore:pkg_resources is deprecated:DeprecationWarning",
]
asyncio_mode = "strict"
